# ark_nova

./: README.md  pyproject.toml
data/: animals.csv
references/: arknovaanimals_VM_v2.xlsx
src/ark_nova/: animal_map.ipynb  main.py  prototype.ipynb  test.py
src/markdown/: README.md
