[project]
name = "ark_nova"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "", email = ""},
]
dependencies = [
    "matplotlib>=3.9.1",
    "geopandas>=1.0.1",
    "ipykernel>=6.29.5",
    "duckdb>=1.0.0",
    "cartopy>=0.23.0",
    "geodatasets>=2024.7.0",
]
requires-python = "==3.11.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
